# ChangeLog for net-libs/libguac-client-rdp
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libguac-client-rdp/ChangeLog,v 1.3 2012/12/05 20:52:51 nativemad Exp $

  06 Dec 2012; Andreas Schuerch <nativemad@gentoo.org>
  libguac-client-rdp-0.7.0.ebuild:
  removed an empty line

*libguac-client-rdp-0.7.0 (06 Dec 2012)

  06 Dec 2012; Andreas Schuerch <nativemad@gentoo.org>
  +libguac-client-rdp-0.7.0.ebuild:
  version bump

*libguac-client-rdp-0.6.2 (10 Nov 2012)

  10 Nov 2012; Andreas Schuerch <nativemad@gentoo.org>
  +libguac-client-rdp-0.6.2.ebuild, +metadata.xml:
  New Ebuild for libguac-client-rdp. Written by me.
