@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST libguac-client-rdp-0.6.2.tar.gz 297591 SHA256 1e08dcb329b3e83b1d8f20c92382b48f46c9f7f1d92e5e321428c7d817620990 SHA512 17069f1e913c7bc757840b34db97d999ac22aa75f69dc7ca70f62d803ab9f04397f0ec13811b81060735a6cf2762608ac5e4368fab934563b2d4a282f411f5ee WHIRLPOOL 98b23fb012a0d034809015d70de67910881e90696a149800c28d3f4464611317d38ea7dc58da6cd323e0ced081767c4b4e5d7b923a19be5432660faf36fe00ca
 DIST libguac-client-rdp-0.7.0.tar.gz 331976 SHA256 5372bfbb3f601b4e727de706b17535db1284ceee782f53496633463fe3587a9a SHA512 3a4007a596309acc76d9faf8f23f5d8c0503b1b57ead69fd1520e7538a05bcd8b2e7e983ad4e0093f1c1c7191e470ba63bd9ecdb66e87d0a2fc0897a6cf07e3b WHIRLPOOL b2d61cff03ad419b35906aa960793a2fa0ac77bc0e3152d598b24ff2caeee05354aee5354d4a81b865957690a86a070c378e92750e78ff29306e4bb75ca4e226
+DIST libguac-client-rdp-0.7.1.tar.gz 309825 SHA256 972c5d829160eaf672894e12b2b918cca0f007db7540afa1da9ff3d844371386 SHA512 b390373fd8732ab08dca550bd8b6e723a090311b63b7376494090994ad928f17afbc801d2a75e0c044e78eb85f9175c93d8c4a61620435a105b448ad0a336302 WHIRLPOOL 811cf735b238ccd9a2fe2c44170a2ceaee037afc05bddcfb5da9b0cdbea72ed64db4c370fe8cc73f0659302d431fe0d3be2df95649f2d8e71ca5531d45c945e6
 EBUILD libguac-client-rdp-0.6.2.ebuild 681 SHA256 2795a27737cdf706659eca9b2e3d7e089a18690ba32eeb4103c00e46a3456a44 SHA512 37785df3c39bf38ad43ae3bec28d87d4ac56643e12f942be112ff5efec67a9023ac8f317861297dddcd79ec0d4ea45d69611a1868d0347e8c2e8e26ddec45b72 WHIRLPOOL 73dc9a4179dcbed51935db626bd5728ac1eb9a3de1bd9d957c5777b1b38c9bd5cac7467b73736be05c50a00f3b30a8d7d2c038feaf76bde7c1cd54c7150cf4d0
 EBUILD libguac-client-rdp-0.7.0.ebuild 681 SHA256 36efa7c852427bec113f4a88531c85a1d5e4e9d5b8cf7f99cd04bbd71a849626 SHA512 58d6be100e8e7fc0bcbac79dba4962518d26f61153a8b67a0731c6790786a5e3878fcdf1e699c557c9005f558d47693f58c6af25d8ece0f381744e9b5392c4cc WHIRLPOOL 0a5e6a4c076c36dab2351671d76a7bbed3a5d2c7f3b24a12357e9f360563a641fd768b73aca540bc41cf9b75c7a0124549bc646084f4735091b01b49171654d8
-MISC ChangeLog 693 SHA256 793d15fc34501e2eefe3adf274837f4e8b73e4af9313db216619de58ff055479 SHA512 80a57155b2781542c59eb37c645fbc7dd90accf16575206f3d0ddcaa7dfd675d1e18e70d87ce473177e8fb44858a7e7cbd8e1229e743bc9b6e8991c06fb7fbde WHIRLPOOL 65fcf30bfa6f35f97a0bf6b7edf80ce327c9e8e2de1ed5ca283ff3927b0818a37a7305ac99071584fd27c7a2c1851bb416e66164139b2279689d660cb11f08c6
+EBUILD libguac-client-rdp-0.7.1.ebuild 681 SHA256 0805576cfab4a857118386bcd433e1b76da3267c0bf9c958873496b170f08c36 SHA512 482497a6660e6b2f4839510e0217cdd32febf2aef65d964d18a55fc803450ca8629a9f09aba104af2dc165f41c4e413fcbf01004f789ac3e98b0d6ad0b7d0b0b WHIRLPOOL 3b0002cb45d20200ba789b9d729bbecd11569fe3cdbadb006f1dc5799585426b3e3d578b2018921c32d778fb53be75b6fbf0c9c44fb67c3bd5225737e9d6d236
+MISC ChangeLog 841 SHA256 18961c7861696492811140d94cbaa78fde78cd860ce67d8e35e80c094f2a20d1 SHA512 47954f4710602bad71865345dd9b1ac6594e8c4d7f21b3224d025354378416c6ed801d5c81f9c396ff6e809607408d7ce98871340eeb057892ba0eed4ba3bd78 WHIRLPOOL 8be165346eaa6f2bba5676e470ed02730434dfebeeb476e0c050560a4a77bf99f74e277c4c94eadb290bcc775cbd1618a6dbcbf7ff603537ae0e69342d28c1ac
 MISC metadata.xml 367 SHA256 ab02420451f4b338e5e01b6ea80274b3f452ef0ffe39926bff0414926e09feab SHA512 112711a6595cde5d6cab6c7823cd96d18dda777cae17e9007297c13831845a262c041e1c332016155e4cb9fdf0d1bae7946e74d8450d1ac8a73ec84fe149dafd WHIRLPOOL 5c22ac879b20cf6c2a874ba67429aa410cdb0e8937e6c9adda32796157fd38907e03cea3eaef3ea0355a43f6e82e98058dfba80fa7967da7ab2d5c5363c99577
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDAIu8ACgkQakKUmsHeVLIPrwCeJhhEV9e0hUeqehjPWo5mJhM7
-mngAnR6cvcynyz7nqTXBLhDJK4Kc4J+b
-=6eWQ
+iEYEAREIAAYFAlDQ4NUACgkQakKUmsHeVLL1TwCdGRp3ftfiZpN6jSmqWerXz5or
+BBoAn0PVALGh9S+VYbTYvi96Ndh7ezmW
+=x8TD
 -----END PGP SIGNATURE-----
