@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libguac-client-rdp
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libguac-client-rdp/ChangeLog,v 1.3 2012/12/05 20:52:51 nativemad Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libguac-client-rdp/ChangeLog,v 1.4 2012/12/18 13:39:46 nativemad Exp $
+
+*libguac-client-rdp-0.7.1 (18 Dec 2012)
+
+  18 Dec 2012; Andreas Schuerch <nativemad@gentoo.org>
+  +libguac-client-rdp-0.7.1.ebuild:
+  version bump
 
   06 Dec 2012; Andreas Schuerch <nativemad@gentoo.org>
   libguac-client-rdp-0.7.0.ebuild:
